--- a/Frontend/www/assets/less/pizza/pizza-card.less
+++ b/Frontend/www/assets/less/pizza/pizza-card.less
@@ -1,6 +1,6 @@
 .pizza-card {
     h3 {
-        color: darkorange;
+        color: @mainColor;
         font-weight:bold;
     }
     .caption{
@@ -24,10 +24,10 @@
         }
         .diam{
             #i_l{
-                margin-right:21%;
+                margin-right:23%;
             }
             #i_r{
-                margin-left:21%;
+                margin-left:18%;
             }
         }
         .weight{
@@ -47,17 +47,19 @@
                 margin-right:17%;
             }
             #p_r{
-                margin-left:17%;
+                margin-left:19%;
             }
         }
         .hrn{
             margin-top:-5px;
             font-weight: bolder;
             #h_l{
-                margin-right:21%;
+                //margin-right:21%;
+                margin-right:15%;
             }
             #h_r{
-                margin-left:23.5%;
+                //margin-left:23.5%;
+                margin-left:27%;
             }
         }
         p{
@@ -74,9 +76,9 @@
     .info-single{
         margin-top:-10px;
         text-align:center;
-        #b_r{
-            float: center; 
-        }
+        //#b_r{
+        //    float: center;
+        //}
         img {
             margin-right:5px;
         }
