--- a/Frontend/www/assets/less/pizza/pizza-card.less
+++ b/Frontend/www/assets/less/pizza/pizza-card.less
@@ -1,127 +1,103 @@
 .pizza-card {
   h3 {
-    color: @mainColor;
-    font-weight: bold;
+    color: darkorange;
+    font-weight:bold;
   }
-
-  .caption {
-    p {
+  .caption{
+    p{
       min-height: 80px;
     }
-
-    #type {
-      color: darkgrey;
-      margin-top: -12px;
+    #type{
+      color:darkgrey;
+      margin-top:-12px;
       font-size: 13px;
     }
-
-    #cont {
-      margin-top: -70px;
+    #cont{
+      margin-top:-70px;
     }
   }
-
-  .info {
-    margin-top: -10px;
-    text-align: center;
-
+  .info{
+    margin-top:-10px;
+    text-align:center;
     img {
-      margin-right: 5px;
+      margin-right:5px;
     }
-
-    .diam {
-      #i_l {
-        margin-right: 23%;
+    .diam{
+      #i_l{
+        margin-right:21%;
       }
-
-      #i_r {
-        margin-left: 18%;
+      #i_r{
+        margin-left:21%;
       }
     }
-
-    .weight {
-      #w_l {
-        margin-right: 20%;
+    .weight{
+      #w_l{
+        margin-right:20%;
       }
-
-      #w_r {
-        margin-left: 20%;
+      #w_r{
+        margin-left:20%;
       }
     }
-
-    .price {
-      margin-top: 15px;
-      position: relative;
-      font-size: 30px;
-      font-weight: bold;
-
-      #p_l {
-        margin-right: 17%;
+    .price{
+      margin-top:15px;
+      position:relative;
+      font-size:30px;
+      font-weight:bold;
+      #p_l{
+        margin-right:17%;
       }
-
-      #p_r {
-        margin-left: 19%;
+      #p_r{
+        margin-left:17%;
       }
     }
-
-    .hrn {
-      margin-top: -5px;
+    .hrn{
+      margin-top:-5px;
       font-weight: bolder;
-
-      #h_l {
-        //margin-right:21%;
-        margin-right: 15%;
+      #h_l{
+        margin-right:21%;
       }
-
-      #h_r {
-        //margin-left:23.5%;
-        margin-left: 27%;
+      #h_r{
+        margin-left:23.5%;
       }
     }
-
-    p {
-      margin-top: 10px;
-
-      #b_l {
-        margin-right: 15%;
+    p{
+      margin-top:10px;
+      #b_l{
+        margin-right:15%;
       }
-
-      #b_r {
-        margin-left: 15%;
+      #b_r{
+        margin-left:15%;
       }
     }
   }
 
-  .info-single {
-    margin-top: -10px;
-    text-align: center;
-    //#b_r{
-    //    float: center;
-    //}
-    img {
-      margin-right: 5px;
+  .info-single{
+    margin-top:-10px;
+    text-align:center;
+    #b_r{
+      float: center;
     }
-
-    .price {
-      margin-top: 15px;
+    img {
+      margin-right:5px;
+    }
+    .price{
+      margin-top:15px;
       position: relative;
-      font-size: 30px;
+      font-size:30px;
       font-weight: bolder;
     }
-
-    .hrn {
-      margin-top: -5px;
+    .hrn{
+      margin-top:-5px;
       font-weight: bold;
     }
-
-    p {
-      margin-top: 10px;
+    p{
+      margin-top:10px;
     }
   }
 
   img {
-    max-width: 240px;
+    max-width:240px;
   }
-
-  min-width: 250px;
-  max-height: 570px;
+  min-width:250px;
+  max-height:570px;
 }
