--- a/Frontend/templates/PizzaCart_OneItemOrder.ejs
+++ b/Frontend/templates/PizzaCart_OneItemOrder.ejs
@@ -1,9 +1,4 @@
 <div class="cart-item">
-    <% if(pizza.is_new) { %>
-        <span class="label label-danger">Нова</span>
-    <% } else if(pizza.is_popular) {%>
-        <span class="label label-success">Популярна</span>
-    <% } %>
     <% if(pizza[size].is_only_one){ %>
         <span id='name'><%= pizza.title %></span>
     <%} else if(pizza[size].size==40) {%>
@@ -19,11 +14,14 @@
     </span>
     <br>
     <div class="b">
-        <h id='c_price'><%= pizza[size].price %>грн</h>
-        <button class="btn btn-danger" id='minus'>-</button>
-        <div class="label label-default" id='amount'><%= quantity %></div>
-        <button class="btn btn-success" id='plus'>+</button>
-        <button class="btn btn-default" id='del'>×</button>
+        <h id='c_price'><%= pizza[size].price*quantity %>грн</h>
+        <% if(quantity == 1){ %>
+            <div class="label label-default" id='amount'><%= quantity+" піца" %></div>
+        <% } else if(quantity < 5) { %>
+            <div class="label label-default" id='amount'><%= quantity+" піци" %></div>
+        <% } else { %>
+            <div class="label label-default" id='amount'><%= quantity+" піц" %></div>
+        <% } %>
     </div>
     <img src="<%= pizza[size].icon %>" id='p_img'>
     <div class='grline'></div>
