--- a/Frontend/www/assets/less/main.less
+++ b/Frontend/www/assets/less/main.less
@@ -1,7 +1,5 @@
 @import "pizza/pizza-card";
 
-@mainColor: #ff7700;
-
 * {
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -10,276 +8,268 @@ body {
   background-color: #FFFFF5;
 }
 
-thumbnail {
-  .caption {
-    .h3 {
-      color: lighten(@mainColor, 15%);
+thumbnail{
+  .caption{
+    .h3{
+      color:darkorange;
     }
   }
 }
 
-.main {
-  min-height: 100px !important;
+#edit_b{
+  background-color:lightgray;
+}
+.bs-callout {
+  padding: 30px;
+  margin: 30px 0;
+  border: 1px solid #eee;
+  border-left-width: 5px;
+  border-radius: 3px;
+}
+.bs-callout h3 {
+  margin-top: 0;
+  margin-bottom: 5px;
+}
+.bs-callout-warning {
+  border-left-color: #f0ad4e;
+}
+.bs-callout-warning h3 {
+  font-size:23px;
+  margin-bottom:15px;
+}
+.bs-callout-info {
+  border-left-color: #5bc0de;
+}
 
+.contact{
+  font-size:20px;
+  margin-bottom:10px;
+}
+
+#next_b{
+  float:right;
+  margin-top:25px;
+  margin-right:50px;
+  margin-bottom:30px;
+  width:100px;
+}
+
+.main{
+  min-height: 100px!important;
   .filters {
     margin-top: 100px;
-
-    h2 {
+    h2{
       text-align: center;
-      font-weight: bold;
-
-      .badge {
-        background-color: lighten(@mainColor, 15%);
-      }
-
     }
   }
 }
 
-.pizza-type {
-  width: 100%;
-  text-align: center;
+.footer_o{
+  bottom:0;
+  margin-bottom:-30px;
+  position:fixed;
+}
 
+#order_container{
+  margin-top:120px;
+}
+
+.pizza-type{
+  width:100%;
+  text-align: center;
   li {
     display: inline-block;
     cursor: pointer;
     padding-bottom: 20px;
-    font-size: 15px;
-
-    a {
-      color: @mainColor;
+    a{
+      color: #EA862E;
       text-decoration: none;
       padding: 10px;
     }
-
     :hover {
-      background-color: lighten(@mainColor, 15%);
-      color: white;
+      background-color:#F0EDED;
       border-radius: 3px;
     }
-
     .active {
-      background-color: lighten(@mainColor, 15%);
+      background-color: #EA862E;
       color: white;
       border-radius: 4px;
     }
   }
 }
 
-#cmf {
-  margin-left: 30%;
-  //float:center;
+#cmf{
+  margin-left:30%;
+  float:center;
 }
 
-.container-fluid {
-  float: left;
-  margin-left: 1%;
-  width: 75%;
+.container-fluid{
+  float:left;
+  margin-left:1%;
+  width:75%;
 }
 
-.cart {
-  background-color: #f2f6f6;
-  float: left;
+.cart{
+  background-color: azure;
+  float:left;
   z-index: 99999;
-  width: 24%;
-  height: 100%;
-
-  .cart-inf {
-    margin-left: 10px;
-    margin-top: 30px;
-    margin-bottom: 20px;
-    font-size: 18px;
-    font-weight: bold;
+  width:24%;
+  height:100%;
+  .cart-inf{
+    margin-left:10px;
+    margin-top:40px;
+    font-size:18px;
+    font-weight:bold;
     max-height: 30px;
-
-    .inf-amount {
-      padding: 1px 6px;
-      font-size: 14px;
-      background-color: @mainColor;
-      color: white;
-      border-radius: 50%
+    .inf-amount{
+      padding: 1px;
+      padding-right: 6px;
+      padding-left: 6px;
+      font-size:14px;
+      background-color:orange;
+      color:white;
+      border-radius:50%
     }
-
-    .clear {
-      margin-left: 10%;
-      font-size: 12px;
+    .clear{
+      margin-left:15px;
+      font-size:12px;
+      background-collor:azure;
       color: lightgray;
-      font-weight: bold;
+      font-weight:bold;
     }
   }
-
-  .items {
-    background-color: #f5f1f1;
-    margin-top: 10px;
+  .items{
+    margin-top:40px;
   }
-
-  .cart-item {
+  .cart-item{
     //margin-top:20px;
-    padding-top: 5%;
     margin-left: 2%;
-    min-height: 123px;
+    min-height:123px;
 
-    #p_img {
-      float: right;
-      //min-width:120px;
-      min-width: 160px;
-      //margin-right: -70px;
-      //margin-top:-115px;
-      margin-right: -90px;
-      margin-top: -140px;
+    #p_img{
+      float:right;
+      min-width:120px;
+      margin-right: -70px;
+      margin-top:-115px;
     }
-
-    #dw {
-      margin-top: -20px;
-
-      #d {
-        margin-right: 5px;
+    #dw{
+      margin-top:-20px;
+      #d{
+        margin-right:5px;
       }
-
-      #w {
-        margin-left: 20px;
+      #w{
+        margin-left:20px;
         //margin-top:-440px;
       }
     }
-
-    #name {
+    #name{
       display: table-cell;
-      font-size: 18px;
-      font-weight: bold;
-      color: @mainColor;
+      font-size:16px;
+      font-weight:bold;
+      color:darkorange;
     }
-
-    .b {
+    .b{
       font-weight: bold;
-      margin-top: 15px;
-
-      #c_price {
-        margin-right: 4px;
+      #c_price{
+        margin-right:4px;
       }
-
-      #minus {
-        width: 30px;
-        height: 30px;
+      #minus{
+        width:30px;
+        height:30px;
         font-weight: bolder;
-        font-size: 10pt;
+        font-size:10pt;
         border-radius: 50%;
       }
-
-      #plus {
-        width: 30px;
-        height: 30px;
+      #plus{
+        width:30px;
+        height:30px;
         font-weight: bolder;
-        font-size: 10pt;
+        font-size:10pt;
         border-radius: 50%;
       }
-
-      #amount {
-        margin-right: -5px;
-        margin-left: -3px;
-        background-color: azure;
-        color: black;
-        font-size: 10pt;
+      #amount{
+        margin-right:-5px;
+        margin-left:-3px;
+        background-color:azure;
+        color:black;
+        font-size:10pt;
       }
-
-      #del {
-        margin-left: 2px;
-        width: 30px;
-        height: 30px;
-        color: @mainColor;
+      #del{
+        margin-left:2px;
+        width:30px;
+        height:30px;
+        color:darkorange;
         font-weight: bolder;
-        font-size: 10pt;
-        border-radius: 50%;
+        font-size:10pt;
+        border-radius:50%;
       }
     }
   }
-
   .grline {
     border-bottom: 1px solid lightgrey;
-    //margin-top: 5px;
-    margin-top: 20px;
-    width: 500px;
+    margin-top: 5px;
+    width:500px;
   }
-
-  img {
-    max-width: 120px;
+  img{
+    max-width:120px;
   }
-
-  .cart-pay {
-    margin-bottom: 10px;
-    position: fixed;
-    bottom: 0;
-    width: inherit;
-    margin-left: 1%;
+  .cart-pay{
+    margin-bottom:10px;
+    position:fixed;
+    bottom:0;
+    width:inherit;
+    margin-left:1%;
     //margin-top:195px;
-    #buy_b {
-      width: 90%;
+    #buy_b, #edit_b{
+      width:90%;
     }
-
-    .pay-info {
-      margin-top: 15px;
-      margin-bottom: 15px;
-      font-size: 16px;
-      font-weight: bold;
-
-      #cart-text {
-        float: left;
+    .pay-info{
+      margin-top:15px;
+      margin-bottom:15px;
+      font-size:16px;
+      font-weight:bold;
+      #cart-text{
+        float:left;
       }
-
-      #cart-price {
-        margin-right: 10%;
-        float: right;
+      #cart-price{
+        margin-right:10%;
+        float:right;
       }
     }
   }
-
-  margin-left: 76%;
-  position: fixed;
+  margin-left:76%;
+  position:fixed;
   box-shadow: rgba(0,0,0,.2) -3px 3px 10px;
 }
 
 .navigation {
-  opacity: 0.95;
-  width: 76%;
+  opacity:0.95;
+  width:76;
   min-height: 85px;
   max-height: 90px;
-
   button {
     float: right;
     margin-top: -4px;
-    background-color: lighten(@mainColor, 5%);
-  }
-
-  button:hover {
-    background-color: @mainColor;
+    background-color: darkorange;
   }
 }
-
 .ad-inform {
   padding-left: 130px;
-  padding-right: 1%;
+  padding-right: 30%;
   padding-top: 17px;
   margin-bottom: 5px;
-  max-height: 75px;
-
+  max-height:75px;
   :first-child {
     font-size: 20px;
   }
-
   color: darkgrey;
-
-  #ph_num {
-    padding-right: 60px;
+  * {
+    padding-right: 15px;
   }
-
-  #hours {
-    padding-right: 60px;
-  }
-
-  #f {
+  #f{
     font-size: 18px;
-    padding-right: 60px;
-  }
 
+  }
   .grline {
     border-bottom: 1px solid darkgrey;
     margin-top: 5px;
@@ -287,145 +277,127 @@ thumbnail {
 }
 
 @media only screen and (max-width: 992px) {
-  .container-fluid {
+  .container-fluid{
     margin-top: 100px;
-    float: left;
-    margin-left: 1%;
-    width: 65%;
+    float:left;
+    margin-left:1%;
+    width:65%;
   }
-
-  .navigation {
-    width: 66%;
-
+  .navigation{
+    width:66%;
     .ad-inform {
       :first-child {
         font-size: 17px;
-        width: 200px;
+        width:200px;
       }
-
-      #pp {
-        position: absolute;
+      #pp{
+        position:absolute;
         font-size: 17px;
-        width: 200px;
+        width:200px;
       }
-
-      .grline {
-        width: 130%;
+      .grline{
+        width:130%;
       }
-
       button {
         margin-top: -8px;
-        margin-right: -500px;
+        margin-right:-88px;
       }
 
     }
   }
-
-  .cart {
-    float: left;
-    margin-left: 66%;
-
-    .cart-inf {
-      width: 200%;
-      font-size: 16px;
-
-      .inf-amount {
-        padding: 1px 4px;
-        font-size: 12px;
-        background-color: lighten(@mainColor, 15%);
-        color: white;
-        border-radius: 50%
+  .cart{
+    float:left;
+    margin-left:66%;
+    .cart-inf{
+      width:200%;
+      font-size:16px;
+      .inf-amount{
+        padding:1px;
+        padding-right:4px;
+        padding-left:4px;
+        font-size:12px;
+        background-color:orange;
+        color:white;
+        border-radius:50%
       }
-
-      .clear {
-        font-size: 10px;
+      .clear{
+        font-size:10px;
       }
     }
-
-    .cart-item {
-      width: 130%;
-      margin-right: -100px;
-
-      #p_img {
-        float: right;
+    .cart-item{
+      width:130%;
+      margin-right:-100px;
+      #p_img{
+        float:right;
         margin-right: -80px;
       }
     }
-
-    .cart-pay {
-      #buy_b {
-        width: 130%;
+    .cart-pay{
+      #buy_b, #edit_b{
+        width:130%;
       }
-
-      .pay-info {
-        font-size: 14px;
-
-        #cart-text {
-          float: left;
+      .pay-info{
+        font-size:14px;
+        #cart-text{
+          float:left;
         }
-
-        #cart-price {
-          margin-right: -20%;
-          float: right;
+        #cart-price{
+          margin-right:-20%;
+          float:right;
         }
       }
     }
   }
 }
 
+.telephone-help-block, .address-help-block, .name-help-block {
+  font-size: 11px;
+  color: #F31F1F;
+}
+
 @media only screen and (max-width: 768px) {
-  .container-fluid {
+  .container-fluid{
     margin-top: 100px;
-    float: left;
-    margin-left: 1%;
-    width: 59%;
+    float:left;
+    margin-left:1%;
+    width:59%;
   }
-
-  .cart {
-    float: left;
-    margin-left: 60%;
-
-    .cart-item {
-      #p_img {
-        float: right;
+  .cart{
+    float:left;
+    margin-left:60%;
+    .cart-item{
+      #p_img{
+        float:right;
         margin-right: -120px;
       }
     }
-
-    .cart-pay {
-      #buy_b {
-        width: 160%;
+    .cart-pay{
+      #buy_b, #edit_b{
+        width:160%;
       }
-
-      .pay-info {
-        font-size: 14px;
-
-        #cart-text {
-          float: left;
+      .pay-info{
+        font-size:14px;
+        #cart-text{
+          float:left;
         }
-
-        #cart-price {
-          margin-right: -50%;
-          float: right;
+        #cart-price{
+          margin-right:-50%;
+          float:right;
         }
       }
     }
   }
-
-  .navigation {
-    width: 60%;
-
+  .navigation{
+    width:60%;
     .ad-inform {
       :first-child {
         font-size: 17px;
       }
-
       button {
         margin-top: 8px;
       }
-
-      .grline {
-        width: 152%;
+      .grline{
+        width:152%;
       }
     }
   }
@@ -439,8 +411,7 @@ thumbnail {
 .pizzas-filters {
   margin-top: 150px;
   margin-bottom: 40px;
-
-  h2 {
+  h2{
     text-align: center;
   }
 }
@@ -448,12 +419,12 @@ thumbnail {
 
 .top-label, .bottom-label {
   position: fixed;
-  z-index: 1111;
+  z-index: 99999;
   text-align: center;
 }
 
 .top-label {
-  top: 0;
+  top:0;
   left: 10px;
 }
 
@@ -465,35 +436,41 @@ thumbnail {
 .label-square {
   width: 100px;
   height: 100px;
-  background-color: lighten(@mainColor, 15%);
+  background-color: #EA862E;
   margin: 0 0 -6px 0;
   color: white;
   font-size: 20px;
   padding-top: 15px;
 }
 
-.label-square span {
+.label-square span{
   font-size: 27px;
 }
 
-.bottom-label {
+.bottom-label{
   bottom: 0;
   left: 10px;
-
-  .label-square {
+  .label-square{
     font-size: 13px;
     font-weight: bolder;
     height: 120px;
-
-    hr {
-      border: 1px dashed white;
+    hr{
+      border: 1px dashed brown;
       margin-top: 5px;
       margin-bottom: 7px;
       width: 80%;
     }
   }
-
   img {
     margin-bottom: -6px;
   }
+}
+
+.footer {
+  padding-top: 50px;
+  padding-right: 350px;
+  padding-bottom: 50px;
+  text-align: center;
+  color: darkgray;
+  width: 100%;
 }
