--- a/Frontend/www/assets/less/main.less
+++ b/Frontend/www/assets/less/main.less
@@ -16,6 +16,16 @@ thumbnail{
   }
 }
 
+#liqpay{
+  float:right;
+}
+#map{
+  width:95%;
+  height:400px;
+  margin-left:2%;
+  margin-bottom:25px;
+}
+
 #edit_b{
   background-color:lightgray;
 }
